# src/main/java/com/deemor/motif/helpRequest/dto/HelpRequestAddDto.java
@@ -1,0 +1,12 @@
+package com.deemor.motif.helpRequest.dto;
+
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+@Getter
+@Setter
+@NoArgsConstructor
+public class HelpRequestAddDto {
+    private String description;
+}
