# src/main/java/com/deemor/motif/helpRequest/entity/HelpRequest.java
@@ -1,0 +1,42 @@
+package com.deemor.motif.helpRequest.entity;
+
+import com.deemor.motif.user.entity.AppUser;
+import lombok.*;
+
+import javax.persistence.*;
+import java.time.LocalDateTime;
+
+@Getter
+@Setter
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+@Entity
+@Table(name="HELP_REQUEST")
+public class HelpRequest {
+
+    @Id
+    @GeneratedValue(
+            strategy = GenerationType.IDENTITY
+    )
+    @Column(name = "id")
+    private Long id;
+
+    @Column(name = "description", nullable = false)
+    private String description;
+
+    @Column(name = "response")
+    private String response;
+
+    @Column(name = "date", nullable = false)
+    private LocalDateTime date;
+
+    @Enumerated(EnumType.STRING)
+    @Column(name = "status")
+    private HelpRequestStatus status;
+
+    @ManyToOne(fetch = FetchType.LAZY, optional = false)
+    @JoinColumn(name = "requester_id", nullable = false)
+    private AppUser requester;
+
+}
