# src/main/java/com/deemor/motif/helpRequest/entity/HelpRequestStatus.java
@@ -1,0 +1,7 @@
+package com.deemor.motif.helpRequest.entity;
+
+public enum HelpRequestStatus {
+    NEW,
+    OPEN,
+    CLOSED
+}
